--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "",
-  "type": "module",
-  "version": "0.0.1",
+  "name": "isolations-next",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro",
-    "typecheck": "tsc --noEmit --pretty false"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
-    "astro": "^4.15.8",
-    "sass": "^1.79.2",
-    "typescript": "^5.6.2"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.13"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18"
   }
 }
