--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
     "typecheck": "tsc --noEmit --pretty false"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.13",
+    "@types/mdx": "^2.0.13",
+    "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.13"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "raw-loader": "^4.0.2",
+    "sass": "^1.79.3",
+    "scss": "^0.2.4",
+    "typescript": "^5"
   }
 }
