--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "raw-loader": "^4.0.2",
     "sass": "^1.79.3",
     "scss": "^0.2.4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^2.1.1"
   }
 }
