--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
     "standard": "^17.1.2",
     "typescript": "^5",
     "vitest": "^2.1.1"
+  },
+  "standard": {
+    "ignore": [
+      "*test.js"
+    ]
   }
 }
