--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/mdx": "^2.0.13",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "rehype-highlight": "^7.0.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
